pkg/lang/syntax/testdata/ub/validate/invalid/stack/missing-encryption.ub
stack: {
  state: local {
    path: '.unobin/state'
  }
}
